5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1674_1879.log
== TEST (2019-04-30 10:37:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",f," de falta")
if H>400:
	print("R$ 500")
else:
	print("R$ 100")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(extra," extras e ",f," de falta")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:37:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500")
else:
	print("R$ 100")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- OUTPUT:
420.0  extras e  20.0  de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:39:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extra = float(input())
falta = float(input())
H = extra - 0.25*falta
print(extra," extras e ",falta," de falta")
if H>400:
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- EXECUTION TIME:
0.189924
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e  20.0  de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e  100.0  de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e  44.0  de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
